Fixed minor spacing issues

--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -463,7 +463,7 @@ h3 {
 }
 
 .last-paragraph {
-  margin-bottom: 4em;
+  margin-bottom: 3em;
 }
 
 #last-paragraph-profile {
@@ -474,8 +474,14 @@ hr {
   width: 50%;
   border: 0;
   height: 1px;
-  background: #333;
-  background-image: linear-gradient(to right, #ccc, #333, #ccc);
+  background: var(--shark-black);
+  background-image: linear-gradient(
+    to right,
+    var(--text-white),
+    var(--shark-black),
+    var(--text-white)
+  );
+  margin-bottom: 4em;
 }
 
 /* SKILL SET */
